# meta-sloth

./: .gitignore  CMakeLists.txt  ReadMe.md  sandbox.cpp
include/meta_sloth/: rand.hpp
src/randomization/: map.cpp  rand.cpp
tests/randomize_quality/: logistic-sloth.csv  plot_rand.ipynb  requirements.txt  uniform-sloth.csv
